--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/common": "^20.0.0",
     "@angular/compiler": "^20.0.0",
     "@angular/core": "^20.0.0",
+    "@angular/fire": "^20.0.1",
     "@angular/forms": "^20.0.0",
     "@angular/material": "^20.0.4",
     "@angular/platform-browser": "^20.0.0",
@@ -33,6 +34,7 @@
     "@angular/ssr": "^20.0.4",
     "bootstrap": "^5.3.7",
     "express": "^5.1.0",
+    "firebase": "^12.3.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.2",
     "tslib": "^2.3.0",
