--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "bootstrap": "^5.3.7",
     "express": "^5.1.0",
     "firebase": "^12.3.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.2",
     "tslib": "^2.3.0",
