--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@angular/platform-server": "^20.0.0",
     "@angular/router": "^20.0.0",
     "@angular/ssr": "^20.0.4",
+    "@types/chart.js": "^2.9.41",
     "bootstrap": "^5.3.7",
+    "chart.js": "^4.5.0",
     "express": "^5.1.0",
     "firebase": "^12.3.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.22.2",
     "tslib": "^2.3.0",
