--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,6 @@
 {
-  "firestore": {
-    "database": "(default)",
-    "location": "southamerica-east1",
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  },
   "hosting": {
-    "public": "dist/SegundoParcial",
+    "public": "dist/SegundoParcial/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
